# research_node

./: .gitignore  Cargo.toml
agents/deno/: deno.jsonc  main.ts  run.sh
contracts/flipper/: Cargo.toml
docs/: workers_lifecyle.excalidraw
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/computing_workers/: Cargo.toml  README.md
pallets/computing_workers/src/: benchmarking.rs  lib.rs  mock.rs  pallet.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/fake_computing/: Cargo.toml
pallets/fake_computing/src/: benchmarking.rs  lib.rs  mock.rs
pallets/registrar/: Cargo.toml
pallets/registrar/src/: benchmarking.rs  lib.rs  mock.rs  pallet.rs  primitives.rs  tests.rs
pallets/simple_computing/: README.md
pallets/simple_computing/src/: lib.rs  macros.rs  mock.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime-primitives/: Cargo.toml
runtime/primitives/: Cargo.toml
runtime/src/: contracts.rs  lib.rs
runtime/src/pallet_configs/: assets.rs  computing_workers.rs  contracts.rs  fake_computing.rs  mod.rs  preimage.rs  registrar.rs  scheduler.rs  simple_computing.rs  timestamp.rs  uniques.rs  vesting.rs
runtime/src/pallets/: contracts.rs  mod.rs
templates/: pallet-weight-template.hbs
worker/: Cargo.toml
worker/src/: chain_bridge.rs  main.rs
worker/src/job_manager/: mod.rs
