[package]
name = "node-primitives"
version = "0.0.1-dev"
authors = ["Jasl <https://github.com/jasl>"]
homepage = "https://github.com/jasl/research-node/"
repository = "https://github.com/jasl/research-node/"
description = "Substrate node low-level primitives."
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"frame-support/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
