[package]
name = "research-worker"
version = "0.0.1-dev"
description = "A prototype implementation of computing worker"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
thiserror = "1.0.38"

serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"

tokio = { version = "1.24.0", features = ["full"] }
futures = "0.3.21"

scale-codec = { package = "parity-scale-codec", version = "3.2.1", features = ["derive", "full", "bit-vec"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
schnorrkel = "0.9.1"
subxt = { version = "0.26.0" }
runtime-primitives = { package = "research-runtime-primitives", path = "../runtime-primitives" }
pallet-computing_workers-primitives = { path = "../pallets/computing_workers/primitives" }

clap = { version = "4.1.1", features = ["derive", "string"] }
url = "2.3.1"

redb = "0.12.1"
